Closed
Bug 941123
Opened 12 years ago
Closed 12 years ago
Double-tap to zoom out fails to render surround content
Categories
(Core :: Panning and Zooming, defect)
Core
Panning and Zooming
Tracking
()
RESOLVED
FIXED
mozilla28
People
(Reporter: jimm, Assigned: mbrubeck)
References
Details
(Whiteboard: [block28])
Attachments
(1 file)
|
2.84 KB,
patch
|
botond
:
review+
|
Details | Diff | Splinter Review |
STR:
1) open a page with a dark background (daringfireball.net)
2) double tap to zoom in on a paragraph
3) double tap anywhere to zoom out
result: on the zoom out, content surrounding the zoomed view isn't refreshed until the zoom operation completes.
| Reporter | ||
Updated•12 years ago
|
Summary: Double-tab to zoom out fails to render surround content → Double-tap to zoom out fails to render surround content
Comment 1•12 years ago
|
||
We need to send a call to GeckoContentController::RequestContentRepaint with mEndZoomToMetrics at the end of AsyncPanZoomController::ZoomToRect in order to improve the responsiveness here. We do the equivalent thing in Fennec too.
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → mbrubeck
| Assignee | ||
Updated•12 years ago
|
| Assignee | ||
Comment 2•12 years ago
|
||
Attachment #8335656 -
Flags: review?(botond)
| Assignee | ||
Comment 3•12 years ago
|
||
When zooming out, this patch is a clear win.
When zooming in, it's a mixed bag. It means that the content is repainted at the higher resolution right away, instead of after a delay (e.g. text is no longer "fuzzy" initially). But it can cause a flash of white around the area that's not part of the new displayport. Bug 785933 would help to mitigate the flash-of-white problem.
Comment 4•12 years ago
|
||
Comment on attachment 8335656 [details] [diff] [review]
patch
Review of attachment 8335656 [details] [diff] [review]:
-----------------------------------------------------------------
::: gfx/layers/ipc/AsyncPanZoomController.cpp
@@ +1451,5 @@
> + &GeckoContentController::RequestContentRepaint,
> + mEndZoomToMetrics),
> + GetFrameTime());
> + mLastPaintRequestMetrics = mEndZoomToMetrics;
> + }
This code is very similar to code at the end of AsyncPanZoomController::RequestContentRepaint(). Could we break it out into a helper function?
Attachment #8335656 -
Flags: review?(botond) → review+
| Assignee | ||
Comment 5•12 years ago
|
||
| Assignee | ||
Comment 6•12 years ago
|
||
(In reply to Botond Ballo [:botond] from comment #4)
> This code is very similar to code at the end of
> AsyncPanZoomController::RequestContentRepaint(). Could we break it out into
> a helper function?
Done:
https://hg.mozilla.org/integration/mozilla-inbound/rev/763eb940987b
Comment 7•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in
before you can comment on or make changes to this bug.
Description
•