Bug 941123 - Pre-render content before starting animated zoom [r=botond]